# bhumi

./: .gitignore  Cargo.toml  README.md
crates/shashtra/: Cargo.toml
crates/shashtra/src/: lib.rs
shashtra/: refs.md
shashtra/bridge-url/: README.md
shashtra/gana-talika/: README.md
shashtra/mantra-boli-talika/: README.md
shashtra/mantra-refs/: README.md
shashtra/mantra-talika/: README.md
shashtra/shashtra-folder-format/: README.md  refs.md
shashtra/shashtra-talika/: README.md
